fixed java warnings, added docu,added persistence